--- a/report/lib/env/environments.tex
+++ b/report/lib/env/environments.tex
@@ -1,6 +1,6 @@
 % Template:     Informe/Reporte LaTeX
 % Documento:    Definición de entornos
-% Versión:      5.1.5 (15/05/2018)
+% Versión:      5.4.0 (21/05/2018)
 % Codificación: UTF-8
 %
 % Autor: Pablo Pizarro R. @ppizarror
@@ -11,237 +11,4 @@
 % Manual template: [http://latex.ppizarror.com/Template-Informe/]
 % Licencia MIT:    [https://opensource.org/licenses/MIT/]
 
-% Crea una sección de referencias solo para bibtex
-\newenvironment{references}{
-	\ifthenelse{\equal{\stylecitereferences}{bibtex}}{
-	}{
-		\throwerror{\references}{Solo se puede usar entorno references con estilo citas \noexpand\stylecitereferences=bibtex}
-	}
-	\begingroup
-	% Se configura las referencias como una sección
-	\ifthenelse{\equal{\donumrefsection}{true}}{
-		\section{\namereferences}
-	}{
-		\sectionanum{\namereferences}
-	}
-	\renewcommand{\section}[2]{}
-	\begin{thebibliography}{99}
-	}
-	{
-	\end{thebibliography}
-	\endgroup
-}
-
-% Crea una sección de anexos
-\newenvironment{anexo}{
-	\begingroup
-	\clearpage
-	\phantomsection
-	\ifthenelse{\equal{\showappendixsectitle}{true}}{
-		\appendixpage}{
-	}
-	\appendixtitleon
-	\appendicestocpagenum
-	\appendixtitletocon
-	\bookmarksetup{
-		numbered,
-		openlevel=0
-	}
-	\begin{appendices}
-		\bookmarksetupnext{level=part}
-		\ifthenelse{\equal{\showappendixsecindex}{true}}{}{
-			\belowpdfbookmark{\nameappendixsection}{contents}
-		}
-		\setcounter{secnumdepth}{3}
-		\setcounter{tocdepth}{3}
-		\ifthenelse{\equal{\appendixindepobjnum}{true}}{
-			\counterwithin{equation}{section}
-			\counterwithin{figure}{section}
-			\counterwithin{lstlisting}{section}
-			\counterwithin{table}{section}}{
-		}
-	}{
-	\end{appendices}
-	\bookmarksetupnext{level=0}
-	\endgroup
-}
-
-% Inserta código fuente con parámetros
-%	#1	Label (opcional)
-%	#2	Estilo de código
-%	#3	Parámetros
-%	#4	Caption
-\lstnewenvironment{sourcecodep}[4][]{
-	\emptyvarerr{sourcecodep}{#2}{Estilo no definido}
-	\checkvalidsourcecodestyle{#2}
-	\ifthenelse{\equal{\showlinenumbers}{true}}{
-		\rightlinenumbers}{
-	}
-	\ifthenelse{\equal{\codecaptiontop}{true}}{
-		\ifx\hfuzz#4\hfuzz
-			\ifx\hfuzz#3\hfuzz
-				\lstset{
-					style=#2
-				}
-			\else
-				\lstset{
-					style=#2,
-					#3
-				}
-			\fi
-		\else
-			\ifx\hfuzz#3\hfuzz
-				\lstset{
-					caption={#4 #1},
-					captionpos=t,
-					style=#2
-				}
-			\else
-				\lstset{
-					caption={#4 #1},
-					captionpos=t,
-					style=#2,
-					#3
-				}
-			\fi
-		\fi
-	}{
-		\ifx\hfuzz#4\hfuzz
-			\ifx\hfuzz#3\hfuzz
-				\lstset{
-					style=#2
-				}
-			\else
-				\lstset{
-					style=#2,
-					#3
-				}
-			\fi
-		\else
-			\ifx\hfuzz#3\hfuzz
-				\lstset{
-					caption={#4 #1},
-					captionpos=b,
-					style=#2
-				}
-			\else
-				\lstset{
-					caption={#4 #1},
-					captionpos=b,
-					style=#2,
-					#3
-				}
-			\fi
-		\fi	
-	}
-}{
-	\ifthenelse{\equal{\showlinenumbers}{true}}{
-		\leftlinenumbers}{
-	}
-}
-
-% Inserta código fuente sin parámetros
-%	#1	Label (opcional)
-%	#2	Estilo de código
-%	#3	Caption
-\lstnewenvironment{sourcecode}[3][]{
-	\emptyvarerr{\equationresize}{#2}{Estilo no definido}
-	\checkvalidsourcecodestyle{#2}
-	\ifthenelse{\equal{\showlinenumbers}{true}}{
-		\rightlinenumbers}{
-	}
-	\ifthenelse{\equal{\codecaptiontop}{true}}{
-		\ifx\hfuzz#3\hfuzz
-			\lstset{
-				style=#2
-			}
-		\else
-			\lstset{
-				style=#2,
-				caption={#3 #1},
-				captionpos=t
-			}
-		\fi
-	}{
-		\ifx\hfuzz#3\hfuzz
-			\lstset{
-				style=#2
-			}
-		\else
-			\lstset{
-				style=#2,
-				caption={#3 #1},
-				captionpos=b
-			}
-		\fi
-	}
-}{
-	\ifthenelse{\equal{\showlinenumbers}{true}}{
-		\leftlinenumbers}{
-	}
-}
-
-% Itemize en negrita
-%	#1	Parámetros opcionales
-\newenvironment{itemizebf}[1][]{
-	\begin{itemize}[font=\bfseries,#1]
-	}{
-	\end{itemize}
-}
-
-% Enumerate en negrita
-%	#1	Parámetros opcionales
-\newenvironment{enumeratebf}[1][]{
-	\begin{enumerate}[font=\bfseries,#1]
-	}{
-	\end{enumerate}
-}
-
-% Crea una sección de resumen
-\newenvironment{resumen}{
-	% Tipo de título para abstract
-	\sectionfont{\color{\titlecolor} \fontsizetitle \styletitle \selectfont}
-	
-	% Inserta un título sin número, sin cabecera y sin aparecer en el índice, para que aparezca en el índice utilizar la función \sectionanumheadless
-	\sectionanumnoiheadless{\nameabstract}}{
-	
-	% Salta de página si está imprimiendo por ambas caras
-	\ifthenelse{\equal{\addemptypagetwosides}{true}}{
-		\checkoddpage
-		\ifoddpage
-			\newpage
-			\null
-			\thispagestyle{empty}
-			\newpage
-			\addtocounter{page}{-1}
-		\else
-		\fi}{
-	}
-}
-
-% Crea una sección de imágenes múltiples
-%	#1	Label (opcional)
-%	#2	Caption
-\newenvironment{images}[2][]{
-	\def\envimageslabelvar {#1}
-	\def\envimagescaptionvar {#2}
-	\def\envimagesinitialized {true}
-	\vspace{\margintopimages cm}
-	\captionsetup{margin=\captionmarginmultimg cm}
-	\begin{figure}[H] \centering
-		\vspace{-\marginrightmultimage cm}
-		\vspace{-\marginrightmultimage cm}
-		\vspace{-\marginrightmultimage cm}
-		}{
-		\setcaptionmargincm{\captionlrmargin}
-		\ifx\hfuzz\envimagescaptionvar\hfuzz
-			\vspace{\captionlessmarginimage cm}
-		\else
-			\caption{\envimagescaptionvar\envimageslabelvar}
-		\fi
-	\end{figure}
-	\setcaptionmargincm{\captionlrmargin}
-	\vspace{\marginbottomimages cm}
-	\def\envimagesinitialized {false}
-}
-\def\envimagesinitialized {false}
+\newenvironment{references}{\ifthenelse{\equal{\stylecitereferences}{bibtex}}{}{\throwerror{\references}{Solo se puede usar entorno references con estilo citas \noexpand\stylecitereferences=bibtex}}\begingroup\ifthenelse{\equal{\donumrefsection}{true}}{\section{\namereferences}}{\sectionanum{\namereferences}}\renewcommand{\section}[2]{}\begin{thebibliography}{99}}{\end{thebibliography}\endgroup}\newenvironment{anexo}{\begingroup\clearpage\phantomsection\ifthenelse{\equal{\showappendixsectitle}{true}}{\appendixpage}{}\appendixtitleon\appendicestocpagenum\appendixtitletocon\bookmarksetup{numbered,openlevel=0}\begin{appendices}\bookmarksetupnext{level=part}\ifthenelse{\equal{\showappendixsecindex}{true}}{}{\belowpdfbookmark{\nameappendixsection}{contents}}\setcounter{secnumdepth}{3}\setcounter{tocdepth}{3}\ifthenelse{\equal{\appendixindepobjnum}{true}}{\counterwithin{equation}{section}\counterwithin{figure}{section}\counterwithin{lstlisting}{section}\counterwithin{table}{section}}{}}{\end{appendices}\bookmarksetupnext{level=0}\endgroup}\lstnewenvironment{sourcecodep}[4][]{\emptyvarerr{sourcecodep}{#2}{Estilo no definido}\checkvalidsourcecodestyle{#2}\ifthenelse{\equal{\showlinenumbers}{true}}{\rightlinenumbers}{}\lstset{backgroundcolor=\color{\sourcecodebgcolor}}\ifthenelse{\equal{\codecaptiontop}{true}}{\ifx\hfuzz#4\hfuzz\ifx\hfuzz#3\hfuzz\lstset{style=#2}\else\lstset{style=#2,#3}\fi\else\ifx\hfuzz#3\hfuzz\lstset{caption={#4 #1},captionpos=t,style=#2}\else\lstset{caption={#4 #1},captionpos=t,style=#2,#3}\fi\fi}{\ifx\hfuzz#4\hfuzz\ifx\hfuzz#3\hfuzz\lstset{style=#2}\else\lstset{style=#2,#3}\fi\else\ifx\hfuzz#3\hfuzz\lstset{caption={#4 #1},captionpos=b,style=#2}\else\lstset{caption={#4 #1},captionpos=b,style=#2,#3}\fi\fi}}{\ifthenelse{\equal{\showlinenumbers}{true}}{\leftlinenumbers}{}}\lstnewenvironment{sourcecode}[3][]{\emptyvarerr{\equationresize}{#2}{Estilo no definido}\checkvalidsourcecodestyle{#2}\ifthenelse{\equal{\showlinenumbers}{true}}{\rightlinenumbers}{}\lstset{backgroundcolor=\color{\sourcecodebgcolor}}\ifthenelse{\equal{\codecaptiontop}{true}}{\ifx\hfuzz#3\hfuzz\lstset{style=#2}\else\lstset{style=#2,caption={#3 #1},captionpos=t}\fi}{\ifx\hfuzz#3\hfuzz\lstset{style=#2}\else\lstset{style=#2,caption={#3 #1},captionpos=b}\fi}}{\ifthenelse{\equal{\showlinenumbers}{true}}{\leftlinenumbers}{}}\newenvironment{itemizebf}[1][]{\begin{itemize}[font=\bfseries,#1]}{\end{itemize}}\newenvironment{enumeratebf}[1][]{\begin{enumerate}[font=\bfseries,#1]}{\end{enumerate}}\newenvironment{resumen}{\sectionfont{\color{\titlecolor} \fontsizetitle \styletitle \selectfont}\sectionanumnoiheadless{\nameabstract}}{\ifthenelse{\equal{\addemptypagetwosides}{true}}{\checkoddpage\ifoddpage\newpage\null\thispagestyle{empty}\newpage\addtocounter{page}{-1}\else\fi}{}}\newenvironment{images}[2][]{\def\envimageslabelvar {#1}\def\envimagescaptionvar {#2}\def\envimagesinitialized {true}\vspace{\margintopimages cm}\captionsetup{margin=\captionmarginmultimg cm}\begin{figure}[H] \centering\vspace{-\marginrightmultimage cm}\vspace{-\marginrightmultimage cm}\vspace{-\marginrightmultimage cm}}{\setcaptionmargincm{\captionlrmargin}\ifx\hfuzz\envimagescaptionvar\hfuzz\vspace{\captionlessmarginimage cm}\else\caption{\envimagescaptionvar\envimageslabelvar}\fi\end{figure}\setcaptionmargincm{\captionlrmargin}\vspace{\marginbottomimages cm}\def\envimagesinitialized {false}}\def\envimagesinitialized {false}
