--- a/report/lib/cmd/all.tex
+++ b/report/lib/cmd/all.tex
@@ -1,6 +1,6 @@
 % Template:     Informe/Reporte LaTeX
 % Documento:    Carga las funciones del template
-% Versión:      5.1.5 (15/05/2018)
+% Versión:      5.4.0 (21/05/2018)
 % Codificación: UTF-8
 %
 % Autor: Pablo Pizarro R. @ppizarror
@@ -11,10 +11,4 @@
 % Manual template: [http://latex.ppizarror.com/Template-Informe/]
 % Licencia MIT:    [https://opensource.org/licenses/MIT/]
 
-\input{lib/cmd/core}
-\input{lib/cmd/math}
-\input{lib/cmd/equation}
-\input{lib/cmd/image}
-\input{lib/cmd/title}
-\input{lib/cmd/other}
-\input{lib/env/environments}
+\input{lib/cmd/core}\input{lib/cmd/math}\input{lib/cmd/equation}\input{lib/cmd/image}\input{lib/cmd/title}\input{lib/cmd/other}\input{lib/env/environments}
