--- a/report/lib/cmd/image.tex
+++ b/report/lib/cmd/image.tex
@@ -1,6 +1,6 @@
 % Template:     Informe/Reporte LaTeX
 % Documento:    Funciones para insertar imágenes
-% Versión:      5.1.5 (15/05/2018)
+% Versión:      5.4.0 (21/05/2018)
 % Codificación: UTF-8
 %
 % Autor: Pablo Pizarro R. @ppizarror
@@ -11,700 +11,4 @@
 % Manual template: [http://latex.ppizarror.com/Template-Informe/]
 % Licencia MIT:    [https://opensource.org/licenses/MIT/]
 
-% Añade una imagen a un env 'image' con borde
-%	#1	Dirección de la imagen
-%	#2	Parámetros de la imagen
-%	#3	Leyenda de la imagen (opcional)
-\newcommand{\addimage}[3]{
-	\addimageboxed{#1}{#2}{0}{#3}
-}
-
-% Añade una imagen a un env 'image' con borde
-%	#1	Dirección de la imagen
-%	#2	Parámetros de la imagen
-%	#3	Ancho de la línea (en pt)
-%	#4	Leyenda de la imagen (opcional)
-\newcommand{\addimageboxed}[4]{
-	\checkonlyonenvimage
-	\begingroup
-		\setlength{\fboxsep}{0 pt}
-		\setlength{\fboxrule}{#3 pt}
-		\hspace{\marginrightmultimage cm}
-		\subfloat[#4]{
-			\fbox{\includegraphics[#2]{#1}}
-		}
-	\endgroup
-}
-
-% Insertar una imagen
-% 	#1	Label (opcional)
-%	#2	Dirección de la imagen
-%	#3	Parámetros de la imagen
-%	#4	Leyenda de la imagen (opcional)
-\newcommand{\insertimage}[4][]{
-	\insertimageboxed[#1]{#2}{#3}{0}{#4}
-}
-
-% Insertar una imagen con recuadro
-% 	#1	Label (opcional)
-%	#2	Dirección de la imagen
-%	#3	Parámetros de la imagen
-%	#4	Ancho de la línea (en pt)
-%	#5	Leyenda de la imagen (opcional)
-\newcommand{\insertimageboxed}[5][]{
-	\emptyvarerr{\insertimageboxed}{#2}{Direccion de la imagen no definida}
-	\emptyvarerr{\insertimageboxed}{#3}{Parametros de la imagen no definidos}
-	\emptyvarerr{\insertimageboxed}{#4}{Ancho de la linea no definido}
-	\checkoutsideenvimage
-	\vspace{\margintopimages cm}
-	\begin{figure}[H]
-		\begingroup
-			\setlength{\fboxsep}{0 pt}
-			\setlength{\fboxrule}{#4 pt}
-			\centering
-			\fbox{\includegraphics[#3]{#2}}
-		\endgroup
-		\ifx\hfuzz#5\hfuzz
-			\vspace{\captionlessmarginimage cm}
-		\else
-			\hspace{0cm}\caption{#5 #1}
-		\fi
-	\end{figure}
-	\vspace{\marginbottomimages cm}
-}
-
-% Insertar una imagen doble
-% [DEPRECADA]
-% 	#1	Label (opcional)
-%	#2	Dirección de la imagen 1
-%	#3	Parámetros de la imagen 1
-%	#4	Leyenda de la imagen 1
-%	#5	Dirección de la imagen 2
-%	#6	Parámetros de la imagen 2
-%	#7	Leyenda de la imagen 2
-%	#8	Leyenda de la imagen doble (opcional)
-\newcommand{\insertdoubleimage}[8][]{
-	\emptyvarerr{\insertdoubleimage}{#2}{Direccion de la imagen 1 no definida}
-	\emptyvarerr{\insertdoubleimage}{#3}{Parametros de la imagen 1 no definidos}
-	\emptyvarerr{\insertdoubleimage}{#5}{Direccion de la imagen 2 no definida}
-	\emptyvarerr{\insertdoubleimage}{#6}{Parametros de la imagen 2 no definidos}
-	\checkoutsideenvimage
-	\alertdeprecatedcmdimage
-	\vspace{\margintopimages cm}
-	\captionsetup{margin=\captionmarginmultimg cm}
-	\begin{figure}[H] \centering
-		\subfloat[#4]{
-			\includegraphics[#3]{#2}
-		}
-		\hspace{\marginrightmultimage cm}
-		\subfloat[#7]{
-			\includegraphics[#6]{#5}
-		}
-		\setcaptionmargincm{\captionlrmargin}
-		\ifx\hfuzz#8\hfuzz
-			\vspace{\captionlessmarginimage cm}
-		\else
-			\caption{#8 #1}
-		\fi
-	\end{figure}
-	\setcaptionmargincm{\captionlrmargin}
-	\vspace{\marginbottomimages cm}
-}
-
-% Insertar una imagen doble, igual propiedades
-% [DEPRECADA]
-% 	#1	Label (opcional)
-%	#2	Dirección de la imagen 1
-%	#3	Leyenda de la imagen 1
-%	#4	Dirección de la imagen 2
-%	#5	Leyenda de la imagen 2
-%	#6	Propiedades de las imágenes
-%	#7 	Leyenda de la imagen doble (opcional)
-\newcommand{\insertdoubleeqimage}[7][]{
-	\insertdoubleimage[#1]{#2}{#6}{#3}{#4}{#6}{#5}{#7}
-}
-
-% Insertar una imagen triple
-% [DEPRECADA]
-% 	#1	Label (opcional)
-%	#2	Dirección de la imagen 1
-%	#3	Parámetros de la imagen 1
-%	#4	Dirección de la imagen 2
-%	#5	Parámetros de la imagen 2
-%	#6	Dirección de la imagen 3
-%	#7	Parámetros de la imagen 3
-%	#8	Leyenda de la imagen triple (opcional)
-\newcommand{\inserttripleimage}[8][]{
-	\emptyvarerr{\inserttripleimage}{#2}{Direccion de la imagen 1 no definida}
-	\emptyvarerr{\inserttripleimage}{#3}{Parametros de la imagen 1 no definidos}
-	\emptyvarerr{\inserttripleimage}{#4}{Direccion de la imagen 2 no definida}
-	\emptyvarerr{\inserttripleimage}{#5}{Parametros de la imagen 2 no definidos}
-	\emptyvarerr{\inserttripleimage}{#6}{Direccion de la imagen 3 no definida}
-	\emptyvarerr{\inserttripleimage}{#7}{Parametros de la imagen 3 no definidos}
-	\checkoutsideenvimage
-	\alertdeprecatedcmdimage
-	\vspace{\margintopimages cm}
-	\captionsetup{margin=\captionmarginmultimg cm}
-	\begin{figure}[H] \centering
-		\subfloat[]{
-			\includegraphics[#3]{#2}
-		}
-		\hspace{\marginrightmultimage cm}
-		\subfloat[]{
-			\includegraphics[#5]{#4}
-		}
-		\hspace{\marginrightmultimage cm}
-		\subfloat[]{
-			\includegraphics[#7]{#6}
-		}
-		\setcaptionmargincm{\captionlrmargin}
-		\ifx\hfuzz#8\hfuzz
-			\vspace{\captionlessmarginimage cm}
-		\else
-			\caption{#8 #1}
-		\fi
-	\end{figure}
-	\setcaptionmargincm{\captionlrmargin}
-	\vspace{\marginbottomimages cm}
-}
-
-% Insertar una imagen triple, igual propiedades
-% [DEPRECADA]
-% 	#1	Label (opcional)
-%	#2	Dirección de la imagen 1
-%	#3	Dirección de la imagen 2
-%	#4	Dirección de la imagen 3
-%	#5	Propiedades de las imágenes
-%	#6	Leyenda de la imagen triple (opcional)
-\newcommand{\inserttripleeqimage}[6][]{
-	\inserttripleimage[#1]{#2}{#5}{#3}{#5}{#4}{#5}{#6}
-}
-
-% Insertar una imagen cuádruple, igual propiedades
-% [DEPRECADA]
-% 	#1	Label (opcional)
-%	#2	Dirección de la imagen 1
-%	#3	Dirección de la imagen 2
-%	#4	Dirección de la imagen 3
-%	#5	Dirección de la imagen 4
-%	#6	Propiedades de las imágenes
-%	#7	Leyenda de la imagen cuádruple (opcional)
-\newcommand{\insertquadimage}[7][]{
-	\emptyvarerr{\insertquadimage}{#2}{Direccion de la imagen 1 no definida}
-	\emptyvarerr{\insertquadimage}{#3}{Direccion de la imagen 2 no definida}
-	\emptyvarerr{\insertquadimage}{#4}{Direccion de la imagen 3 no definida}
-	\emptyvarerr{\insertquadimage}{#5}{Direccion de la imagen 4 no definida}
-	\emptyvarerr{\insertquadimage}{#6}{Propiedades de las imagenes no definidos}
-	\checkoutsideenvimage
-	\alertdeprecatedcmdimage
-	\vspace{\margintopimages cm}
-	\captionsetup{margin=\captionmarginmultimg cm cm}
-	\begin{figure}[H] \centering
-		\subfloat[]{
-			\includegraphics[#6]{#2}
-		}
-		\hspace{\marginrightmultimage cm}
-		\subfloat[]{
-			\includegraphics[#6]{#3}
-		}
-		\hspace{\marginrightmultimage cm}
-		\subfloat[]{
-			\includegraphics[#6]{#4}
-		}
-		\hspace{\marginrightmultimage cm}
-		\subfloat[]{
-			\includegraphics[#6]{#5}
-		}
-		\setcaptionmargincm{\captionlrmargin}
-		\ifx\hfuzz#7\hfuzz
-			\vspace{\captionlessmarginimage cm}
-		\else
-			\caption{#7 #1}
-		\fi
-	\end{figure}
-	\setcaptionmargincm{\captionlrmargin}
-	\vspace{\marginbottomimages cm}
-}
-
-% Insertar una imagen quíntuple, igual propiedades
-% [DEPRECADA]
-% 	#1	Label (opcional)
-%	#2	Dirección de la imagen 1
-%	#3	Dirección de la imagen 2
-%	#4	Dirección de la imagen 3
-%	#5	Dirección de la imagen 4
-%	#6	Dirección de la imagen 5
-%	#7	Propiedades de las imágenes
-%	#8	Leyenda de la imagen quíntuple (opcional)
-\newcommand{\insertpentaimage}[8][]{
-	\emptyvarerr{\insertpentaimage}{#2}{Direccion de la imagen 1 no definida}
-	\emptyvarerr{\insertpentaimage}{#3}{Direccion de la imagen 2 no definida}
-	\emptyvarerr{\insertpentaimage}{#4}{Direccion de la imagen 3 no definida}
-	\emptyvarerr{\insertpentaimage}{#5}{Direccion de la imagen 4 no definida}
-	\emptyvarerr{\insertpentaimage}{#6}{Direccion de la imagen 5 no definida}
-	\emptyvarerr{\insertpentaimage}{#7}{Propiedades de las imagenes no definidas}
-	\checkoutsideenvimage
-	\alertdeprecatedcmdimage
-	\vspace{\margintopimages cm}
-	\captionsetup{margin=\captionmarginmultimg cm cm}
-	\begin{figure}[H] \centering
-		\subfloat[]{
-			\includegraphics[#7]{#2}
-		}
-		\hspace{\marginrightmultimage cm}
-		\subfloat[]{
-			\includegraphics[#7]{#3}
-		}
-		\hspace{\marginrightmultimage cm}
-		\subfloat[]{
-			\includegraphics[#7]{#4}
-		}
-		\hspace{\marginrightmultimage cm}
-		\subfloat[]{
-			\includegraphics[#7]{#5}
-		}
-		\hspace{\marginrightmultimage cm}
-		\subfloat[]{
-			\includegraphics[#7]{#6}
-		}
-		\setcaptionmargincm{\captionlrmargin}
-		\ifx\hfuzz#8\hfuzz
-			\vspace{\captionlessmarginimage cm}
-		\else
-			\caption{#8 #1}
-		\fi
-	\end{figure}
-	\setcaptionmargincm{\captionlrmargin}
-	\vspace{\marginbottomimages cm}
-}
-
-% Insertar una imagen con 6 imágenes, igual propiedades
-% [DEPRECADA]
-% 	#1	Label (opcional)
-%	#2	Dirección de la imagen 1
-%	#3	Dirección de la imagen 2
-%	#4	Dirección de la imagen 3
-%	#5	Dirección de la imagen 4
-%	#6	Dirección de la imagen 5
-%	#7	Dirección de la imagen 6
-%	#8	Propiedades de las imágenes
-%	#9	Leyenda de la imagen global (opcional)
-\newcommand{\inserthexaimage}[9][]{
-	\emptyvarerr{\inserthexaimage}{#2}{Direccion de la imagen 1 no definida}
-	\emptyvarerr{\inserthexaimage}{#3}{Direccion de la imagen 2 no definida}
-	\emptyvarerr{\inserthexaimage}{#4}{Direccion de la imagen 3 no definida}
-	\emptyvarerr{\inserthexaimage}{#5}{Direccion de la imagen 4 no definida}
-	\emptyvarerr{\inserthexaimage}{#6}{Direccion de la imagen 5 no definida}
-	\emptyvarerr{\inserthexaimage}{#7}{Direccion de la imagen 6 no definida}
-	\emptyvarerr{\inserthexaimage}{#8}{Propiedades de las imagenes no definidas}
-	\checkoutsideenvimage
-	\alertdeprecatedcmdimage
-	\vspace{\margintopimages cm}
-	\captionsetup{margin=\captionmarginmultimg cm}
-	\begin{figure}[H] \centering
-		\subfloat[]{
-			\includegraphics[#8]{#2}
-		}
-		\hspace{\marginrightmultimage cm}
-		\subfloat[]{
-			\includegraphics[#8]{#3}
-		}
-		\hspace{\marginrightmultimage cm}
-		\subfloat[]{
-			\includegraphics[#8]{#4}
-		}
-		\hspace{\marginrightmultimage cm}
-		\subfloat[]{
-			\includegraphics[#8]{#5}
-		}
-		\hspace{\marginrightmultimage cm}
-		\subfloat[]{
-			\includegraphics[#8]{#6}
-		}
-		\hspace{\marginrightmultimage cm}
-		\subfloat[]{
-			\includegraphics[#8]{#7}
-		}
-		\setcaptionmargincm{\captionlrmargin}
-		\ifx\hfuzz#9\hfuzz
-			\vspace{\captionlessmarginimage cm}
-		\else
-			\caption{#9 #1}
-		\fi
-	\end{figure}
-	\setcaptionmargincm{\captionlrmargin}
-	\vspace{\marginbottomimages cm}
-}
-
-% Insertar una imagen a la izquierda, escalada, ancho fijo
-% 	#1	Label (opcional)
-%	#2	Dirección de la imagen
-%	#3	Ancho de la imagen (en textwidth)
-%	#4	Leyenda de la imagen (opcional)
-\newcommand{\insertimageleft}[4][]{
-	\insertimageleftboxed[#1]{#2}{#3}{0}{#4}
-}
-
-% Insertar una imagen a la izquierda, escalada, ancho fijo
-% 	#1	Label (opcional)
-%	#2	Dirección de la imagen
-%	#3	Ancho de la imagen (en textwidth)
-%	#4	Ancho de la línea (en pt)
-%	#5	Leyenda de la imagen (opcional)
-\newcommand{\insertimageleftboxed}[5][]{
-	\emptyvarerr{\insertimageleftboxed}{#2}{Direccion de la imagen no definida}
-	\emptyvarerr{\insertimageleftboxed}{#3}{Ancho de la imagen no definido}
-	\emptyvarerr{\insertimageleftboxed}{#4}{Ancho de la linea no definido}
-	\checkoutsideenvimage
-	~
-	\vspace{-\baselineskip}
-	\par
-	\begin{wrapfigure}{l}{#3\textwidth}
-		\setcaptionmargincm{0}
-		\ifthenelse{\equal{\figurecaptiontop}{true}}{}{
-			\vspace{\marginfloatimages pt}
-		}
-		\begingroup
-			\setlength{\fboxsep}{0 pt}
-			\setlength{\fboxrule}{#4 pt}
-			\centering
-			\fbox{\includegraphics[width=\linewidth]{#2}}
-		\endgroup
-		\ifx\hfuzz#5\hfuzz
-			\vspace{\captionlessmarginimage cm}
-		\else
-			\caption{#5 #1}
-		\fi
-	\end{wrapfigure}
-	\setcaptionmargincm{\captionlrmargin}
-}
-
-% Insertar una imagen a la izquierda, ajustada en un número de líneas, escalada, ancho fijo
-% 	#1	Label (opcional)
-%	#2	Dirección de la imagen
-%	#3	Ancho de la imagen (en textwidth)
-%	#4	Altura en líneas de la imagen
-%	#5	Leyenda de la imagen (opcional)
-\newcommand{\insertimageleftline}[5][]{
-	\insertimageleftlineboxed[#1]{#2}{#3}{0}{#4}{#5}
-}
-
-% Insertar una imagen recuadrada a la izquierda, ajustada en un número de líneas, escalada, ancho fijo
-% 	#1	Label (opcional)
-%	#2	Dirección de la imagen
-%	#3	Ancho de la imagen (en textwidth)
-%	#4	Ancho de la línea (en pt)
-%	#5	Altura en líneas de la imagen
-%	#6	Leyenda de la imagen (opcional)
-\newcommand{\insertimageleftlineboxed}[6][]{
-	\emptyvarerr{\insertimageleftlineboxed}{#2}{Direccion de la imagen no definida}
-	\emptyvarerr{\insertimageleftlineboxed}{#3}{Ancho de la imagen no definido}
-	\emptyvarerr{\insertimageleftlineboxed}{#4}{Ancho de la linea no definido}
-	\emptyvarerr{\insertimageleftlineboxed}{#5}{Altura en lineas de la imagen flotante izquierda no definida}
-	\checkoutsideenvimage
-	~
-	\vspace{-\baselineskip}
-	\par
-	\begin{wrapfigure}[#5]{l}{#3\textwidth}
-		\setcaptionmargincm{0}
-		\ifthenelse{\equal{\figurecaptiontop}{true}}{}{
-			\vspace{\marginfloatimages pt}}
-		\begingroup
-			\setlength{\fboxsep}{0 pt}
-			\setlength{\fboxrule}{#4 pt}
-			\centering
-			\fbox{\includegraphics[width=\linewidth]{#2}}
-		\endgroup
-		\ifx\hfuzz#6\hfuzz
-			\vspace{\captionlessmarginimage cm}
-		\else
-			\caption{#6 #1}
-		\fi
-	\end{wrapfigure}
-	\setcaptionmargincm{\captionlrmargin}
-}
-
-% Insertar una imagen a la derecha, escalada, ancho fijo
-% 	#1	Label (opcional)
-%	#2	Dirección de la imagen
-%	#3	Ancho de la imagen (en textwidth)
-%	#4	Leyenda de la imagen (opcional)
-\newcommand{\insertimageright}[4][]{
-	\insertimagerightboxed[#1]{#2}{#3}{0}{#4}
-}
-
-% Insertar una imagen recuadrada a la derecha, escalada, ancho fijo
-% 	#1	Label (opcional)
-%	#2	Dirección de la imagen
-%	#3	Ancho de la imagen (en textwidth)
-%	#4	Ancho de la línea (en pt)
-%	#5	Leyenda de la imagen (opcional)
-\newcommand{\insertimagerightboxed}[5][]{
-	\emptyvarerr{\insertimagerightboxed}{#2}{Direccion de la imagen no definida}
-	\emptyvarerr{\insertimagerightboxed}{#3}{Ancho de la imagen no defindo}
-	\emptyvarerr{\insertimagerightboxed}{#4}{Ancho de la linea no definido}
-	\checkoutsideenvimage
-	~
-	\vspace{-\baselineskip}
-	\par
-	\begin{wrapfigure}{r}{#3\textwidth}
-		\setcaptionmargincm{0}
-		\ifthenelse{\equal{\figurecaptiontop}{true}}{}{
-			\vspace{\marginfloatimages pt}
-		}
-		\begingroup
-			\setlength{\fboxsep}{0 pt}
-			\setlength{\fboxrule}{#4 pt}
-			\centering
-			\fbox{\includegraphics[width=\linewidth]{#2}}
-		\endgroup
-		\ifx\hfuzz#5\hfuzz
-			\vspace{\captionlessmarginimage cm}
-		\else
-			\caption{#5 #1}
-		\fi
-	\end{wrapfigure}
-	\setcaptionmargincm{\captionlrmargin}
-}
-
-% Insertar una imagen a la derecha, ajustada en un número de líneas, escalada, ancho fijo
-% 	#1	Label (opcional)
-%	#2	Dirección de la imagen
-%	#3	Ancho de la imagen (en textwidth)
-%	#4	Altura en líneas de la imagen
-%	#5	Leyenda de la imagen (opcional)
-\newcommand{\insertimagerightline}[5][]{
-	\insertimagerightlineboxed[#1]{#2}{#3}{0}{#4}{#5}
-}
-
-% Insertar una imagen recuadrada a la derecha, ajustada en un número de líneas, escalada, ancho fijo
-% 	#1	Label (opcional)
-%	#2	Dirección de la imagen
-%	#3	Ancho de la imagen (en textwidth)
-%	#4	Ancho de la línea (en pt)
-%	#5	Altura en líneas de la imagen
-%	#6	Leyenda de la imagen (opcional)
-\newcommand{\insertimagerightlineboxed}[6][]{
-	\emptyvarerr{\insertimagerightlineboxed}{#2}{Direccion de la imagen no definida}
-	\emptyvarerr{\insertimagerightlineboxed}{#3}{Ancho de la imagen no defindo}
-	\emptyvarerr{\insertimagerightlineboxed}{#4}{Ancho de la linea no definido}
-	\emptyvarerr{\insertimagerightlineboxed}{#5}{Altura en lineas de la imagen flotante derecha no definida}
-	\checkoutsideenvimage
-	~
-	\vspace{-\baselineskip}
-	\par
-	\begin{wrapfigure}[#5]{r}{#3\textwidth}
-		\setcaptionmargincm{0}
-		\ifthenelse{\equal{\figurecaptiontop}{true}}{}{
-			\vspace{\marginfloatimages pt}
-		}
-		\begingroup
-			\setlength{\fboxsep}{0 pt}
-			\setlength{\fboxrule}{#4 pt}
-			\centering
-			\fbox{\includegraphics[width=\linewidth]{#2}}
-		\endgroup
-		\ifx\hfuzz#6\hfuzz
-			\vspace{\captionlessmarginimage cm}
-		\else
-			\caption{#6 #1}
-		\fi
-	\end{wrapfigure}
-	\setcaptionmargincm{\captionlrmargin}
-}
-
-% Insertar una imagen a la izquierda, propiedades variables
-% 	#1	Label (opcional)
-%	#2	Dirección de la imagen
-%	#3	Ancho del objeto
-%	#4	Propiedades de la imagen
-%	#5	Leyenda de la imagen (opcional)
-\newcommand{\insertimageleftp}[5][]{
-	\xspace~\\
-	\vspace{-2\baselineskip}
-	\par
-	\insertimageleftboxedp[#1]{#2}{#3}{#4}{0}{#5}
-}
-
-% Insertar una imagen a la izquierda, propiedades variables
-% 	#1	Label (opcional)
-%	#2	Dirección de la imagen
-%	#3	Ancho del objeto
-%	#4	Propiedades de la imagen
-%	#5	Ancho de la línea (en pt)
-%	#6	Leyenda de la imagen (opcional)
-\newcommand{\insertimageleftboxedp}[6][]{
-	\emptyvarerr{\insertimageleftboxedp}{#2}{Direccion de la imagen no definida}
-	\emptyvarerr{\insertimageleftboxedp}{#3}{Ancho del objeto no definido}
-	\emptyvarerr{\insertimageleftboxedp}{#4}{Propiedades de la imagen no defindos}
-	\emptyvarerr{\insertimageleftboxedp}{#5}{Ancho de la linea no definido}
-	\checkoutsideenvimage
-	~
-	\vspace{-\baselineskip}
-	\par
-	\begin{wrapfigure}{l}{#3}
-		\setcaptionmargincm{0}
-		\ifthenelse{\equal{\figurecaptiontop}{true}}{}{
-			\vspace{\marginfloatimages pt}
-		}
-		\begingroup
-			\setlength{\fboxsep}{0 pt}
-			\setlength{\fboxrule}{#5 pt}
-			\centering
-			\fbox{\includegraphics[#4]{#2}}
-		\endgroup
-		\ifx\hfuzz#6\hfuzz
-			\vspace{\captionlessmarginimage cm}
-		\else
-			\caption{#6 #1}
-		\fi
-	\end{wrapfigure}
-	\setcaptionmargincm{\captionlrmargin}
-}
-
-% Insertar una imagen a la izquierda, ajustada en un número de líneas, propiedades variables
-% 	#1	Label (opcional)
-%	#2	Dirección de la imagen
-%	#3	Ancho del objeto
-%	#4	Propiedades de la imagen
-%	#5	Altura en líneas de la imagen
-%	#6	Leyenda de la imagen (opcional)
-\newcommand{\insertimageleftlinep}[6][]{
-	\insertimageleftlineboxedp[#1]{#2}{#3}{#4}{0}{#5}{#6}
-}
-
-% Insertar una imagen recuadrada a la izquierda, ajustada en un número de líneas, propiedades variables
-% 	#1	Label (opcional)
-%	#2	Dirección de la imagen
-%	#3	Ancho del objeto
-%	#4	Propiedades de la imagen
-%	#5	Ancho de la línea (en pt)
-%	#6	Altura en líneas de la imagen
-%	#7	Leyenda de la imagen (opcional)
-\newcommand{\insertimageleftlineboxedp}[7][]{
-	\emptyvarerr{\insertimageleftlineboxedp}{#2}{Direccion de la imagen no definida}
-	\emptyvarerr{\insertimageleftlineboxedp}{#3}{Ancho del objeto no definido}
-	\emptyvarerr{\insertimageleftlineboxedp}{#4}{Propiedades de la imagen no definidos}
-	\emptyvarerr{\insertimageleftlineboxedp}{#5}{Ancho de la linea no definido}
-	\emptyvarerr{\insertimageleftlineboxedp}{#6}{Altura en lineas de la imagen flotante izquierda no definida}
-	\checkoutsideenvimage
-	~
-	\vspace{-\baselineskip}
-	\par
-	\begin{wrapfigure}[#6]{l}{#3}
-		\setcaptionmargincm{0}
-		\ifthenelse{\equal{\figurecaptiontop}{true}}{}{
-			\vspace{\marginfloatimages pt}
-		}
-		\begingroup
-			\setlength{\fboxsep}{0 pt}
-			\setlength{\fboxrule}{#5 pt}
-			\centering
-			\fbox{\includegraphics[#4]{#2}}
-		\endgroup
-		\ifx\hfuzz#7\hfuzz
-			\vspace{\captionlessmarginimage cm}
-		\else
-			\caption{#7 #1}
-		\fi
-	\end{wrapfigure}
-	\setcaptionmargincm{\captionlrmargin}
-}
-
-% Insertar una imagen a la derecha, propiedades variables
-% 	#1	Label (opcional)
-%	#2	Dirección de la imagen
-%	#3	Ancho del objeto (en cm)
-%	#4	Propiedades de la imagen
-%	#5	Leyenda de la imagen (opcional)
-\newcommand{\insertimagerightp}[5][]{
-	\xspace~\\
-	\vspace{-2\baselineskip}
-	\par
-	\insertimagerightboxedp[#1]{#2}{#3}{#4}{0}{#5}
-}
-
-% Insertar una imagen recuadrada a la derecha, propiedades variables
-% 	#1	Label (opcional)
-%	#2	Dirección de la imagen
-%	#3	Ancho del objeto
-%	#4	Propiedades de la imagen
-%	#5	Ancho de la línea (en pt)
-%	#6	Leyenda de la imagen (opcional)
-\newcommand{\insertimagerightboxedp}[6][]{
-	\emptyvarerr{\insertimagerightboxedp}{#2}{Direccion de la imagen no definida}
-	\emptyvarerr{\insertimagerightboxedp}{#3}{Ancho del objeto no definido}
-	\emptyvarerr{\insertimagerightboxedp}{#4}{Propiedades de la imagen no definidos}
-	\emptyvarerr{\insertimagerightboxedp}{#5}{Ancho de la linea no definido}
-	\checkoutsideenvimage
-	~
-	\vspace{-\baselineskip}
-	\par
-	\begin{wrapfigure}{r}{#3}
-		\setcaptionmargincm{0}
-		\ifthenelse{\equal{\figurecaptiontop}{true}}{}{
-			\vspace{\marginfloatimages pt}
-		}
-		\begingroup
-			\setlength{\fboxsep}{0 pt}
-			\setlength{\fboxrule}{#5 pt}
-			\centering
-			\fbox{\includegraphics[#4]{#2}}
-		\endgroup
-		\ifx\hfuzz#6\hfuzz
-			\vspace{\captionlessmarginimage cm}
-		\else
-			\caption{#6 #1}
-		\fi
-	\end{wrapfigure}
-	\setcaptionmargincm{\captionlrmargin}
-}
-
-% Insertar una imagen a la derecha, ajustada en un número de líneas, propiedades variables
-% 	#1	Label (opcional)
-%	#2	Dirección de la imagen
-%	#3	Ancho del objeto (en cm)
-%	#4	Propiedades de la imagen
-%	#5	Altura en líneas de la imagen
-%	#6	Leyenda de la imagen (opcional)
-\newcommand{\insertimagerightlinep}[6][]{
-	\insertimagerightlineboxedp[#1]{#2}{#3}{#4}{0}{#5}{#6}
-}
-
-% Insertar una imagen recuadrada a la derecha, ajustada en un número de líneas, propiedades variables
-% 	#1	Label (opcional)
-%	#2	Dirección de la imagen
-%	#3	Ancho del objeto
-%	#4	Propiedades de la imagen
-%	#5	Ancho de la línea (en pt)
-%	#6	Altura en líneas de la imagen
-%	#7	Leyenda de la imagen (opcional)
-\newcommand{\insertimagerightlineboxedp}[7][]{
-	\emptyvarerr{\insertimagerightlineboxedp}{#2}{Direccion de la imagen no definida}
-	\emptyvarerr{\insertimagerightlineboxedp}{#3}{Ancho del objeto no definido}
-	\emptyvarerr{\insertimagerightlineboxedp}{#4}{Propiedades de la imagen no definidos}
-	\emptyvarerr{\insertimagerightlineboxedp}{#5}{Ancho de la linea no definido}
-	\emptyvarerr{\insertimagerightlineboxedp}{#6}{Altura en lineas de la imagen flotante derecha no definida}
-	\checkoutsideenvimage
-	~
-	\vspace{-\baselineskip}
-	\par
-	\begin{wrapfigure}[#6]{r}{#3}
-		\setcaptionmargincm{0}
-		\ifthenelse{\equal{\figurecaptiontop}{true}}{}{
-			\vspace{\marginfloatimages pt}
-		}
-		\begingroup
-			\setlength{\fboxsep}{0 pt}
-			\setlength{\fboxrule}{#5 pt}
-			\centering
-			\fbox{\includegraphics[#4]{#2}}
-		\endgroup
-		\ifx\hfuzz#7\hfuzz
-			\vspace{\captionlessmarginimage cm}
-		\else
-			\caption{#7 #1}
-		\fi
-	\end{wrapfigure}
-	\setcaptionmargincm{\captionlrmargin}
-}
+\newcommand{\addimage}[3]{\addimageboxed{#1}{#2}{0}{#3}}\newcommand{\addimageboxed}[4]{\checkonlyonenvimage\begingroup\setlength{\fboxsep}{0 pt}\setlength{\fboxrule}{#3 pt}\hspace{\marginrightmultimage cm}\subfloat[#4]{\fbox{\includegraphics[#2]{#1}}}\endgroup}\newcommand{\insertimage}[4][]{\insertimageboxed[#1]{#2}{#3}{0}{#4}}\newcommand{\insertimageboxed}[5][]{\emptyvarerr{\insertimageboxed}{#2}{Direccion de la imagen no definida}\emptyvarerr{\insertimageboxed}{#3}{Parametros de la imagen no definidos}\emptyvarerr{\insertimageboxed}{#4}{Ancho de la linea no definido}\checkoutsideenvimage\vspace{\margintopimages cm}\begin{figure}[H]\begingroup\setlength{\fboxsep}{0 pt}\setlength{\fboxrule}{#4 pt}\centering\fbox{\includegraphics[#3]{#2}}\endgroup\ifx\hfuzz#5\hfuzz\vspace{\captionlessmarginimage cm}\else\hspace{0cm}\caption{#5 #1}\fi\end{figure}\vspace{\marginbottomimages cm}}\newcommand{\insertdoubleimage}[8][]{\emptyvarerr{\insertdoubleimage}{#2}{Direccion de la imagen 1 no definida}\emptyvarerr{\insertdoubleimage}{#3}{Parametros de la imagen 1 no definidos}\emptyvarerr{\insertdoubleimage}{#5}{Direccion de la imagen 2 no definida}\emptyvarerr{\insertdoubleimage}{#6}{Parametros de la imagen 2 no definidos}\checkoutsideenvimage\alertdeprecatedcmdimage\vspace{\margintopimages cm}\captionsetup{margin=\captionmarginmultimg cm}\begin{figure}[H] \centering\subfloat[#4]{\includegraphics[#3]{#2}}\hspace{\marginrightmultimage cm}\subfloat[#7]{\includegraphics[#6]{#5}}\setcaptionmargincm{\captionlrmargin}\ifx\hfuzz#8\hfuzz\vspace{\captionlessmarginimage cm}\else\caption{#8 #1}\fi\end{figure}\setcaptionmargincm{\captionlrmargin}\vspace{\marginbottomimages cm}}\newcommand{\insertdoubleeqimage}[7][]{\insertdoubleimage[#1]{#2}{#6}{#3}{#4}{#6}{#5}{#7}}\newcommand{\inserttripleimage}[8][]{\emptyvarerr{\inserttripleimage}{#2}{Direccion de la imagen 1 no definida}\emptyvarerr{\inserttripleimage}{#3}{Parametros de la imagen 1 no definidos}\emptyvarerr{\inserttripleimage}{#4}{Direccion de la imagen 2 no definida}\emptyvarerr{\inserttripleimage}{#5}{Parametros de la imagen 2 no definidos}\emptyvarerr{\inserttripleimage}{#6}{Direccion de la imagen 3 no definida}\emptyvarerr{\inserttripleimage}{#7}{Parametros de la imagen 3 no definidos}\checkoutsideenvimage\alertdeprecatedcmdimage\vspace{\margintopimages cm}\captionsetup{margin=\captionmarginmultimg cm}\begin{figure}[H] \centering\subfloat[]{\includegraphics[#3]{#2}}\hspace{\marginrightmultimage cm}\subfloat[]{\includegraphics[#5]{#4}}\hspace{\marginrightmultimage cm}\subfloat[]{\includegraphics[#7]{#6}}\setcaptionmargincm{\captionlrmargin}\ifx\hfuzz#8\hfuzz\vspace{\captionlessmarginimage cm}\else\caption{#8 #1}\fi\end{figure}\setcaptionmargincm{\captionlrmargin}\vspace{\marginbottomimages cm}}\newcommand{\inserttripleeqimage}[6][]{\inserttripleimage[#1]{#2}{#5}{#3}{#5}{#4}{#5}{#6}}\newcommand{\insertquadimage}[7][]{\emptyvarerr{\insertquadimage}{#2}{Direccion de la imagen 1 no definida}\emptyvarerr{\insertquadimage}{#3}{Direccion de la imagen 2 no definida}\emptyvarerr{\insertquadimage}{#4}{Direccion de la imagen 3 no definida}\emptyvarerr{\insertquadimage}{#5}{Direccion de la imagen 4 no definida}\emptyvarerr{\insertquadimage}{#6}{Propiedades de las imagenes no definidos}\checkoutsideenvimage\alertdeprecatedcmdimage\vspace{\margintopimages cm}\captionsetup{margin=\captionmarginmultimg cm cm}\begin{figure}[H] \centering\subfloat[]{\includegraphics[#6]{#2}}\hspace{\marginrightmultimage cm}\subfloat[]{\includegraphics[#6]{#3}}\hspace{\marginrightmultimage cm}\subfloat[]{\includegraphics[#6]{#4}}\hspace{\marginrightmultimage cm}\subfloat[]{\includegraphics[#6]{#5}}\setcaptionmargincm{\captionlrmargin}\ifx\hfuzz#7\hfuzz\vspace{\captionlessmarginimage cm}\else\caption{#7 #1}\fi\end{figure}\setcaptionmargincm{\captionlrmargin}\vspace{\marginbottomimages cm}}\newcommand{\insertpentaimage}[8][]{\emptyvarerr{\insertpentaimage}{#2}{Direccion de la imagen 1 no definida}\emptyvarerr{\insertpentaimage}{#3}{Direccion de la imagen 2 no definida}\emptyvarerr{\insertpentaimage}{#4}{Direccion de la imagen 3 no definida}\emptyvarerr{\insertpentaimage}{#5}{Direccion de la imagen 4 no definida}\emptyvarerr{\insertpentaimage}{#6}{Direccion de la imagen 5 no definida}\emptyvarerr{\insertpentaimage}{#7}{Propiedades de las imagenes no definidas}\checkoutsideenvimage\alertdeprecatedcmdimage\vspace{\margintopimages cm}\captionsetup{margin=\captionmarginmultimg cm cm}\begin{figure}[H] \centering\subfloat[]{\includegraphics[#7]{#2}}\hspace{\marginrightmultimage cm}\subfloat[]{\includegraphics[#7]{#3}}\hspace{\marginrightmultimage cm}\subfloat[]{\includegraphics[#7]{#4}}\hspace{\marginrightmultimage cm}\subfloat[]{\includegraphics[#7]{#5}}\hspace{\marginrightmultimage cm}\subfloat[]{\includegraphics[#7]{#6}}\setcaptionmargincm{\captionlrmargin}\ifx\hfuzz#8\hfuzz\vspace{\captionlessmarginimage cm}\else\caption{#8 #1}\fi\end{figure}\setcaptionmargincm{\captionlrmargin}\vspace{\marginbottomimages cm}}\newcommand{\inserthexaimage}[9][]{\emptyvarerr{\inserthexaimage}{#2}{Direccion de la imagen 1 no definida}\emptyvarerr{\inserthexaimage}{#3}{Direccion de la imagen 2 no definida}\emptyvarerr{\inserthexaimage}{#4}{Direccion de la imagen 3 no definida}\emptyvarerr{\inserthexaimage}{#5}{Direccion de la imagen 4 no definida}\emptyvarerr{\inserthexaimage}{#6}{Direccion de la imagen 5 no definida}\emptyvarerr{\inserthexaimage}{#7}{Direccion de la imagen 6 no definida}\emptyvarerr{\inserthexaimage}{#8}{Propiedades de las imagenes no definidas}\checkoutsideenvimage\alertdeprecatedcmdimage\vspace{\margintopimages cm}\captionsetup{margin=\captionmarginmultimg cm}\begin{figure}[H] \centering\subfloat[]{\includegraphics[#8]{#2}}\hspace{\marginrightmultimage cm}\subfloat[]{\includegraphics[#8]{#3}}\hspace{\marginrightmultimage cm}\subfloat[]{\includegraphics[#8]{#4}}\hspace{\marginrightmultimage cm}\subfloat[]{\includegraphics[#8]{#5}}\hspace{\marginrightmultimage cm}\subfloat[]{\includegraphics[#8]{#6}}\hspace{\marginrightmultimage cm}\subfloat[]{\includegraphics[#8]{#7}}\setcaptionmargincm{\captionlrmargin}\ifx\hfuzz#9\hfuzz\vspace{\captionlessmarginimage cm}\else\caption{#9 #1}\fi\end{figure}\setcaptionmargincm{\captionlrmargin}\vspace{\marginbottomimages cm}}\newcommand{\insertimageleft}[4][]{\insertimageleftboxed[#1]{#2}{#3}{0}{#4}}\newcommand{\insertimageleftboxed}[5][]{\emptyvarerr{\insertimageleftboxed}{#2}{Direccion de la imagen no definida}\emptyvarerr{\insertimageleftboxed}{#3}{Ancho de la imagen no definido}\emptyvarerr{\insertimageleftboxed}{#4}{Ancho de la linea no definido}\checkoutsideenvimage~\vspace{-\baselineskip}\par\begin{wrapfigure}{l}{#3\textwidth}\setcaptionmargincm{0}\ifthenelse{\equal{\figurecaptiontop}{true}}{}{\vspace{\marginfloatimages pt}}\begingroup\setlength{\fboxsep}{0 pt}\setlength{\fboxrule}{#4 pt}\centering\fbox{\includegraphics[width=\linewidth]{#2}}\endgroup\ifx\hfuzz#5\hfuzz\vspace{\captionlessmarginimage cm}\else\caption{#5 #1}\fi\end{wrapfigure}\setcaptionmargincm{\captionlrmargin}}\newcommand{\insertimageleftline}[5][]{\insertimageleftlineboxed[#1]{#2}{#3}{0}{#4}{#5}}\newcommand{\insertimageleftlineboxed}[6][]{\emptyvarerr{\insertimageleftlineboxed}{#2}{Direccion de la imagen no definida}\emptyvarerr{\insertimageleftlineboxed}{#3}{Ancho de la imagen no definido}\emptyvarerr{\insertimageleftlineboxed}{#4}{Ancho de la linea no definido}\emptyvarerr{\insertimageleftlineboxed}{#5}{Altura en lineas de la imagen flotante izquierda no definida}\checkoutsideenvimage~\vspace{-\baselineskip}\par\begin{wrapfigure}[#5]{l}{#3\textwidth}\setcaptionmargincm{0}\ifthenelse{\equal{\figurecaptiontop}{true}}{}{\vspace{\marginfloatimages pt}}\begingroup\setlength{\fboxsep}{0 pt}\setlength{\fboxrule}{#4 pt}\centering\fbox{\includegraphics[width=\linewidth]{#2}}\endgroup\ifx\hfuzz#6\hfuzz\vspace{\captionlessmarginimage cm}\else\caption{#6 #1}\fi\end{wrapfigure}\setcaptionmargincm{\captionlrmargin}}\newcommand{\insertimageright}[4][]{\insertimagerightboxed[#1]{#2}{#3}{0}{#4}}\newcommand{\insertimagerightboxed}[5][]{\emptyvarerr{\insertimagerightboxed}{#2}{Direccion de la imagen no definida}\emptyvarerr{\insertimagerightboxed}{#3}{Ancho de la imagen no defindo}\emptyvarerr{\insertimagerightboxed}{#4}{Ancho de la linea no definido}\checkoutsideenvimage~\vspace{-\baselineskip}\par\begin{wrapfigure}{r}{#3\textwidth}\setcaptionmargincm{0}\ifthenelse{\equal{\figurecaptiontop}{true}}{}{\vspace{\marginfloatimages pt}}\begingroup\setlength{\fboxsep}{0 pt}\setlength{\fboxrule}{#4 pt}\centering\fbox{\includegraphics[width=\linewidth]{#2}}\endgroup\ifx\hfuzz#5\hfuzz\vspace{\captionlessmarginimage cm}\else\caption{#5 #1}\fi\end{wrapfigure}\setcaptionmargincm{\captionlrmargin}}\newcommand{\insertimagerightline}[5][]{\insertimagerightlineboxed[#1]{#2}{#3}{0}{#4}{#5}}\newcommand{\insertimagerightlineboxed}[6][]{\emptyvarerr{\insertimagerightlineboxed}{#2}{Direccion de la imagen no definida}\emptyvarerr{\insertimagerightlineboxed}{#3}{Ancho de la imagen no defindo}\emptyvarerr{\insertimagerightlineboxed}{#4}{Ancho de la linea no definido}\emptyvarerr{\insertimagerightlineboxed}{#5}{Altura en lineas de la imagen flotante derecha no definida}\checkoutsideenvimage~\vspace{-\baselineskip}\par\begin{wrapfigure}[#5]{r}{#3\textwidth}\setcaptionmargincm{0}\ifthenelse{\equal{\figurecaptiontop}{true}}{}{\vspace{\marginfloatimages pt}}\begingroup\setlength{\fboxsep}{0 pt}\setlength{\fboxrule}{#4 pt}\centering\fbox{\includegraphics[width=\linewidth]{#2}}\endgroup\ifx\hfuzz#6\hfuzz\vspace{\captionlessmarginimage cm}\else\caption{#6 #1}\fi\end{wrapfigure}\setcaptionmargincm{\captionlrmargin}}\newcommand{\insertimageleftp}[5][]{\xspace~\\\vspace{-2\baselineskip}\par\insertimageleftboxedp[#1]{#2}{#3}{#4}{0}{#5}}\newcommand{\insertimageleftboxedp}[6][]{\emptyvarerr{\insertimageleftboxedp}{#2}{Direccion de la imagen no definida}\emptyvarerr{\insertimageleftboxedp}{#3}{Ancho del objeto no definido}\emptyvarerr{\insertimageleftboxedp}{#4}{Propiedades de la imagen no defindos}\emptyvarerr{\insertimageleftboxedp}{#5}{Ancho de la linea no definido}\checkoutsideenvimage~\vspace{-\baselineskip}\par\begin{wrapfigure}{l}{#3}\setcaptionmargincm{0}\ifthenelse{\equal{\figurecaptiontop}{true}}{}{\vspace{\marginfloatimages pt}}\begingroup\setlength{\fboxsep}{0 pt}\setlength{\fboxrule}{#5 pt}\centering\fbox{\includegraphics[#4]{#2}}\endgroup\ifx\hfuzz#6\hfuzz\vspace{\captionlessmarginimage cm}\else\caption{#6 #1}\fi\end{wrapfigure}\setcaptionmargincm{\captionlrmargin}}\newcommand{\insertimageleftlinep}[6][]{\insertimageleftlineboxedp[#1]{#2}{#3}{#4}{0}{#5}{#6}}\newcommand{\insertimageleftlineboxedp}[7][]{\emptyvarerr{\insertimageleftlineboxedp}{#2}{Direccion de la imagen no definida}\emptyvarerr{\insertimageleftlineboxedp}{#3}{Ancho del objeto no definido}\emptyvarerr{\insertimageleftlineboxedp}{#4}{Propiedades de la imagen no definidos}\emptyvarerr{\insertimageleftlineboxedp}{#5}{Ancho de la linea no definido}\emptyvarerr{\insertimageleftlineboxedp}{#6}{Altura en lineas de la imagen flotante izquierda no definida}\checkoutsideenvimage~\vspace{-\baselineskip}\par\begin{wrapfigure}[#6]{l}{#3}\setcaptionmargincm{0}\ifthenelse{\equal{\figurecaptiontop}{true}}{}{\vspace{\marginfloatimages pt}}\begingroup\setlength{\fboxsep}{0 pt}\setlength{\fboxrule}{#5 pt}\centering\fbox{\includegraphics[#4]{#2}}\endgroup\ifx\hfuzz#7\hfuzz\vspace{\captionlessmarginimage cm}\else\caption{#7 #1}\fi\end{wrapfigure}\setcaptionmargincm{\captionlrmargin}}\newcommand{\insertimagerightp}[5][]{\xspace~\\\vspace{-2\baselineskip}\par\insertimagerightboxedp[#1]{#2}{#3}{#4}{0}{#5}}\newcommand{\insertimagerightboxedp}[6][]{\emptyvarerr{\insertimagerightboxedp}{#2}{Direccion de la imagen no definida}\emptyvarerr{\insertimagerightboxedp}{#3}{Ancho del objeto no definido}\emptyvarerr{\insertimagerightboxedp}{#4}{Propiedades de la imagen no definidos}\emptyvarerr{\insertimagerightboxedp}{#5}{Ancho de la linea no definido}\checkoutsideenvimage~\vspace{-\baselineskip}\par\begin{wrapfigure}{r}{#3}\setcaptionmargincm{0}\ifthenelse{\equal{\figurecaptiontop}{true}}{}{\vspace{\marginfloatimages pt}}\begingroup\setlength{\fboxsep}{0 pt}\setlength{\fboxrule}{#5 pt}\centering\fbox{\includegraphics[#4]{#2}}\endgroup\ifx\hfuzz#6\hfuzz\vspace{\captionlessmarginimage cm}\else\caption{#6 #1}\fi\end{wrapfigure}\setcaptionmargincm{\captionlrmargin}}\newcommand{\insertimagerightlinep}[6][]{\insertimagerightlineboxedp[#1]{#2}{#3}{#4}{0}{#5}{#6}}\newcommand{\insertimagerightlineboxedp}[7][]{\emptyvarerr{\insertimagerightlineboxedp}{#2}{Direccion de la imagen no definida}\emptyvarerr{\insertimagerightlineboxedp}{#3}{Ancho del objeto no definido}\emptyvarerr{\insertimagerightlineboxedp}{#4}{Propiedades de la imagen no definidos}\emptyvarerr{\insertimagerightlineboxedp}{#5}{Ancho de la linea no definido}\emptyvarerr{\insertimagerightlineboxedp}{#6}{Altura en lineas de la imagen flotante derecha no definida}\checkoutsideenvimage~\vspace{-\baselineskip}\par\begin{wrapfigure}[#6]{r}{#3}\setcaptionmargincm{0}\ifthenelse{\equal{\figurecaptiontop}{true}}{}{\vspace{\marginfloatimages pt}}\begingroup\setlength{\fboxsep}{0 pt}\setlength{\fboxrule}{#5 pt}\centering\fbox{\includegraphics[#4]{#2}}\endgroup\ifx\hfuzz#7\hfuzz\vspace{\captionlessmarginimage cm}\else\caption{#7 #1}\fi\end{wrapfigure}\setcaptionmargincm{\captionlrmargin}}
