--- a/report/lib/cmd/title.tex
+++ b/report/lib/cmd/title.tex
@@ -1,6 +1,6 @@
 % Template:     Informe/Reporte LaTeX
 % Documento:    Funciones para insertar títulos
-% Versión:      5.1.5 (15/05/2018)
+% Versión:      5.4.0 (21/05/2018)
 % Codificación: UTF-8
 %
 % Autor: Pablo Pizarro R. @ppizarror
@@ -11,113 +11,4 @@
 % Manual template: [http://latex.ppizarror.com/Template-Informe/]
 % Licencia MIT:    [https://opensource.org/licenses/MIT/]
 
-% Insertar un título sin número
-% 	#1	Título
-\newcommand{\sectionanum}[1]{
-	\emptyvarerr{\sectionanum}{#1}{Titulo no definido}
-	\phantomsection
-	\needspace{3\baselineskip}
-	\section*{#1}
-	\addcontentsline{toc}{section}{#1}
-	\ifthenelse{\equal{\anumsecaddtocounter}{true}}{\stepcounter{section}}{}
-	\changeheadertitle{#1}
-}
-
-% Insertar un título sin número y sin indexar
-% 	#1	Título
-\newcommand{\sectionanumnoi}[1]{
-	\emptyvarerr{\sectionanumnoi}{#1}{Titulo no definido}
-	\phantomsection
-	\needspace{3\baselineskip}
-	\section*{#1}
-	\ifthenelse{\equal{\anumsecaddtocounter}{true}}{\stepcounter{section}}{}
-	\changeheadertitle{#1}
-}
-
-% Insertar un título sin número sin cambiar el título del header
-% 	#1	Título
-\newcommand{\sectionanumheadless}[1]{
-	\emptyvarerr{\sectionanumnoheadless}{#1}{Titulo no definido}
-	\section*{#1}
-	\addcontentsline{toc}{section}{#1}
-	\ifthenelse{\equal{\anumsecaddtocounter}{true}}{\stepcounter{section}}{}
-}
-
-% Insertar un título sin número, sin indexar y sin cambiar el título del header
-% 	#1	Título
-\newcommand{\sectionanumnoiheadless}[1]{
-	\emptyvarerr{\sectionanumnoi}{#1}{Titulo no definido}
-	\section*{#1}
-	\ifthenelse{\equal{\anumsecaddtocounter}{true}}{\stepcounter{section}}{}
-}
-
-% Insertar un subtítulo sin número
-% 	#1	Subtítulo
-\newcommand{\subsectionanum}[1]{
-	\emptyvarerr{\subsectionanum}{#1}{Subtitulo no definido}
-	\subsection*{#1}
-	\addcontentsline{toc}{subsection}{#1}
-	\ifthenelse{\equal{\anumsecaddtocounter}{true}}{\stepcounter{subsection}}{}
-}
-
-% Insertar un subtítulo sin número y sin indexar
-% 	#1	Subtítulo
-\newcommand{\subsectionanumnoi}[1]{
-	\emptyvarerr{\subsectionanumnoi}{#1}{Subtitulo no definido}
-	\subsection*{#1}
-	\ifthenelse{\equal{\anumsecaddtocounter}{true}}{\stepcounter{subsection}}{}
-}
-
-% Insertar un sub-subtítulo sin número
-% 	#1	Sub-subtítulo
-\newcommand{\subsubsectionanum}[1]{
-	\emptyvarerr{\subsubsectionanum}{#1}{Sub-subtitulo no definido}
-	\subsubsection*{#1}
-	\addcontentsline{toc}{subsubsection}{#1}
-	\ifthenelse{\equal{\anumsecaddtocounter}{true}}{\stepcounter{subsubsection}}{}
-}
-
-% Insertar un sub-subtítulo sin número y sin indexar
-% 	#1	Sub-subtítulo
-\newcommand{\subsubsectionanumnoi}[1]{
-	\emptyvarerr{\subsubsectionanumnoi}{#1}{Sub-subtitulo no definido}
-	\subsubsection*{#1}
-	\ifthenelse{\equal{\anumsecaddtocounter}{true}}{\stepcounter{subsubsection}}{}
-}
-
-% Cambia el título del header
-%	#1	Título
-\newcommand{\changeheadertitle}[1]{
-	\emptyvarerr{\changeheadertitle}{#1}{Titulo no definido}
-	\markboth{#1}{}
-}
-
-% Insertar un título en un índice
-%	#1	Título
-%	#2	Margen superior en pt. (opcional), 10pt por defecto
-\newcommand{\insertindextitle}[2]{
-	\emptyvarerr{\insertindextitle}{#1}{Titulo no definido}
-	\ifx\hfuzz#2\hfuzz
-		\addtocontents{toc}{\protect\addvspace{\indextitlemargin pt}}
-	\else
-		\addtocontents{toc}{\protect\addvspace{#2 pt}}
-	\fi
-	\addtocontents{toc}{\noindent\hyperref[swpn]{\textbf{#1}}}
-}
-
-% Crear un capítulo como una sección
-%	#1	Título
-\newcommand{\newchapter}[1]{
-	\emptyvarerr{\newchapter}{#1}{Titulo no definido}
-	\newpage
-	\stepcounter{section}
-	\phantomsection
-	\needspace{3\baselineskip}
-	\vspace* {3cm}
-	\noindent {\huge{\textbf{\nomchapter\ \thesection}}} \\
-	\vspace* {0.5cm} \\
-	\noindent {\Huge{\textbf{#1}}} \\
-	\vspace {0.5cm} \\
-	\addcontentsline{toc}{section}{\protect\numberline{\thesection}#1}
-	\markboth{#1}{}
-}
+\newcommand{\sectionanum}[1]{\emptyvarerr{\sectionanum}{#1}{Titulo no definido}\phantomsection\needspace{3\baselineskip}\section*{#1}\addcontentsline{toc}{section}{#1}\ifthenelse{\equal{\anumsecaddtocounter}{true}}{\stepcounter{section}}{}\changeheadertitle{#1}}\newcommand{\sectionanumnoi}[1]{\emptyvarerr{\sectionanumnoi}{#1}{Titulo no definido}\phantomsection\needspace{3\baselineskip}\section*{#1}\ifthenelse{\equal{\anumsecaddtocounter}{true}}{\stepcounter{section}}{}\changeheadertitle{#1}}\newcommand{\sectionanumheadless}[1]{\emptyvarerr{\sectionanumnoheadless}{#1}{Titulo no definido}\section*{#1}\addcontentsline{toc}{section}{#1}\ifthenelse{\equal{\anumsecaddtocounter}{true}}{\stepcounter{section}}{}}\newcommand{\sectionanumnoiheadless}[1]{\emptyvarerr{\sectionanumnoi}{#1}{Titulo no definido}\section*{#1}\ifthenelse{\equal{\anumsecaddtocounter}{true}}{\stepcounter{section}}{}}\newcommand{\subsectionanum}[1]{\emptyvarerr{\subsectionanum}{#1}{Subtitulo no definido}\subsection*{#1}\addcontentsline{toc}{subsection}{#1}\ifthenelse{\equal{\anumsecaddtocounter}{true}}{\stepcounter{subsection}}{}}\newcommand{\subsectionanumnoi}[1]{\emptyvarerr{\subsectionanumnoi}{#1}{Subtitulo no definido}\subsection*{#1}\ifthenelse{\equal{\anumsecaddtocounter}{true}}{\stepcounter{subsection}}{}}\newcommand{\subsubsectionanum}[1]{\emptyvarerr{\subsubsectionanum}{#1}{Sub-subtitulo no definido}\subsubsection*{#1}\addcontentsline{toc}{subsubsection}{#1}\ifthenelse{\equal{\anumsecaddtocounter}{true}}{\stepcounter{subsubsection}}{}}\newcommand{\subsubsectionanumnoi}[1]{\emptyvarerr{\subsubsectionanumnoi}{#1}{Sub-subtitulo no definido}\subsubsection*{#1}\ifthenelse{\equal{\anumsecaddtocounter}{true}}{\stepcounter{subsubsection}}{}}\newcommand{\changeheadertitle}[1]{\emptyvarerr{\changeheadertitle}{#1}{Titulo no definido}\markboth{#1}{}}\newcommand{\insertindextitle}[2]{\emptyvarerr{\insertindextitle}{#1}{Titulo no definido}\ifx\hfuzz#2\hfuzz\addtocontents{toc}{\protect\addvspace{\indextitlemargin pt}}\else\addtocontents{toc}{\protect\addvspace{#2 pt}}\fi\addtocontents{toc}{\noindent\hyperref[swpn]{\textbf{#1}}}}\newcommand{\newchapter}[1]{\emptyvarerr{\newchapter}{#1}{Titulo no definido}\newpage\stepcounter{section}\phantomsection\needspace{3\baselineskip}\vspace* {3cm}\noindent {\huge{\textbf{\nomchapter\ \thesection}}} \\\vspace* {0.5cm} \\\noindent {\Huge{\textbf{#1}}} \\\vspace {0.5cm} \\\addcontentsline{toc}{section}{\protect\numberline{\thesection}#1}\markboth{#1}{}}
