--- a/report/lib/style/all.tex
+++ b/report/lib/style/all.tex
@@ -1,6 +1,6 @@
 % Template:     Informe/Reporte LaTeX
 % Documento:    Estilos del template
-% Versión:      5.1.5 (15/05/2018)
+% Versión:      5.4.0 (21/05/2018)
 % Codificación: UTF-8
 %
 % Autor: Pablo Pizarro R. @ppizarror
@@ -11,6 +11,4 @@
 % Manual template: [http://latex.ppizarror.com/Template-Informe/]
 % Licencia MIT:    [https://opensource.org/licenses/MIT/]
 
-\input{lib/style/color}
-\input{lib/style/code}
-\input{lib/style/other}
+\input{lib/style/color}\input{lib/style/code}\input{lib/style/other}
